--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.10.0",
