--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
