--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-circular-progressbar": "^2.0.4",
+    "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
+    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
