--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0"
   }
