--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
