--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-viewer-dv": "^1.0.2",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
