--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
@@ -18,11 +19,19 @@
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-image-viewer-dv": "^1.0.2",
+    "react-loading": "^2.0.3",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "react-visibility-sensor": "^5.1.1",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
