--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
     "react": "17.0.2",
