--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.3.1",
     "react-image-viewer-dv": "^1.0.2",
     "react-loading": "^2.0.3",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
