--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
